@@ -20,6 +20,7 @@ Wagtail 4.1 is designated a Long Term Support (LTS) release. Long Term Support r
  * Optimise the performance of the Wagtail userbar to remove duplicated queries, improving page loads when viewing live pages while signed in (Jake Howard)
  * Remove legacy `unbutton` styling for buttons (Paarth Agarwal)
  * Add button variations to the pattern library (Paarth Agarwal)
+ * Provide a more accessible page title where the unique information is shown first and the CMS name is shown last (Mehrdad Moradizadeh)
 
 ### Bug fixes
 
