@@ -149,7 +149,7 @@ class TestPreview(TestCase, WagtailTestUtils):
         self.assertTemplateUsed(response, "wagtailadmin/generic/preview_error.html")
         self.assertContains(
             response,
-            "<title>Wagtail - Preview not available</title>",
+            "<title>Preview not available - Wagtail</title>",
             html=True,
         )
         self.assertContains(
@@ -188,7 +188,7 @@ class TestPreview(TestCase, WagtailTestUtils):
         self.assertTemplateUsed(response, "wagtailadmin/generic/preview_error.html")
         self.assertContains(
             response,
-            "<title>Wagtail - Preview not available</title>",
+            "<title>Preview not available - Wagtail</title>",
             html=True,
         )
         self.assertContains(
@@ -345,7 +345,7 @@ class TestPreview(TestCase, WagtailTestUtils):
         self.assertTemplateUsed(response, "wagtailadmin/generic/preview_error.html")
         self.assertContains(
             response,
-            "<title>Wagtail - Preview not available</title>",
+            "<title>Preview not available - Wagtail</title>",
             html=True,
         )
         self.assertContains(
@@ -380,7 +380,7 @@ class TestPreview(TestCase, WagtailTestUtils):
         self.assertTemplateUsed(response, "wagtailadmin/generic/preview_error.html")
         self.assertContains(
             response,
-            "<title>Wagtail - Preview not available</title>",
+            "<title>Preview not available - Wagtail</title>",
             html=True,
         )
         self.assertContains(
